---
config:
  layout: elk
  theme: mc
  look: neo
---
classDiagram
    class BaseEntity {
        +int id
        +Date createdAt
        +Date updatedAt
        +Date|null deletedAt
        +bool isLocked
    }

    class AssetsItem {
        +string url
        +AssetsItemType type
        +string name
        +string description
    }

    class Category {
        +string name
        +string description
        +int? categoryId
    }

    class Item {
        +string name
        +string description
        +int? categoryId
        +AssetsItem[] assets
    }

    class Language {
        +string code
        +string country
        +string value
    }

    class LanguageCountry {
        +string country
        +string description
    }

    class LanguageCode {
        +string code
        +string description
    }

    class Permission {
        +string name
        +string description
        +bool canDelete
        +int[] parentIds
    }

    class User {
        +string email
    }

    AssetsItem --|> BaseEntity
    Category --|> BaseEntity
    Item --|> BaseEntity
    Language --|> BaseEntity
    LanguageCountry --|> BaseEntity
    LanguageCode --|> BaseEntity
    Permission --|> BaseEntity
    User --|> BaseEntity
    Category "1" --> "1" AssetsItem : iconAssets
    Item "1" --> "1" Category : category
    LanguageCountry "1" --> "*" Language : languages
    LanguageCode "1" --> "*" Language : languages
    User "1" --> "*" Inventory : inventories
    Item "*" -- "*" AssetsItem : assets
    Permission "*" -- "*" User : users
    Permission "*" -- "*" Permission : parents / children
    User "*" -- "*" Permission : permissions